--- a/ResNest_based_classify_leaves.ipynb
+++ b/ResNest_based_classify_leaves.ipynb
@@ -6,7 +6,7 @@
     "id": "ijYSEHmOf-62"
    },
    "source": [
-    "## **基于EfficientNet的树叶分类课程竞赛**"
+    "## **基于ResNeSt的树叶分类课程竞赛**"
    ]
   },
   {
